--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
             <div class="card-content">
                 <h1 data-testid="fullName">Chidinma Judith Chieke</h1>
                 <h3 data-testid="jobTitle">Student</h3>
-                <p data-testid="shortBio">Chidinma Judith Chieke is a student at the University of Lagos, studying Computer Science. She is passionate about technology and is always eager to learn new things. She is an aspiring frontend developer and is also learning about product management. </p>
+                <p data-testid="shortBio">
+                Chidinma Judith Chieke is a final-year Biology Education student at the University of Lagos, an aspiring frontend developer, and a budding technical product manager. 
+                Passionate about learning and connecting with people, chidinma thrives on innovation and problem-solving. 
+                A lover of God, novels, good food, and restful sleep, chidinma seeks to make an impact through technology and education.  
+                </p>
             </div>
                 <div class="contact">
                     <h4>Contact:</h4>
                     <p data-testid="emailAddress">Email: chiekechidinma7@gmail.com</p>
-            <div class="card-social" data-testid="socialLinks">
-                <a href="https://twitter.com/ChidinmaJudithC" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/twitter.png"/></a>
-                <a href="https://www.linkedin.com/in/chidinma-judith-chieke-0b0b3b1b1/" target="_blank">
-                <img src="https://img.icons8.com/color/48/000000/linkedin.png"/></a>   
-            </div>        
             </div>
+            <div class="card-social" data-testid="socialLinks">
+                <a href="https://x.com/Assistant_kiwi" target="_blank">
+                <img src="https://img.icons8.com/ios-filled/50/000000/x.png" alt="X Icon"/></a>
+                <a href="https://www.linkedin.com/in/chidinmajudithchieke" target="_blank">
+                <img src="https://img.icons8.com/color/48/000000/linkedin.png" alt="LinkedIn Icon"/></a>   
+            </div>        
             <div class="location">
                 <h4>Location:</h4>
                 <p data-testid="location">Lagos, Nigeria</p>
             </div>
             <div class="time">
-                <h4>Current Time:</h4>
+                <h4>Current Time (UTC):</h4>
                 <p data-testid="currentTimeUTC" id="currentTime"></p>
             </div>
         </div>
