corrected the image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <body>
         <div class="card">
             <div class="card-image">
-                <img id="profilePicture" data-testid="profilePicture" src="./assets/CUTIE.jpg" alt="Profile Picture" />
+                <img id="profilePicture" data-testid="profilePicture" src="./assets/chieke.png" alt="Profile Picture" />
             </div>
             <div class="card-content">
                 <h1 data-testid="fullName">Chidinma Judith Chieke</h1>
